--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,17 @@
     </parent>
 
     <dependencies>
+
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>webmagic-core</artifactId>
+            <version>0.7.3</version>
+        </dependency>
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>webmagic-extension</artifactId>
+            <version>0.7.3</version>
+        </dependency>
         <!--Spring Boot依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -163,5 +174,6 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
+
 
 </project>
